<resources>
    <string name="app_name">LKMS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="signup_failed">Đăng ký thất bại. Vui lòng thử lại.</string>

    <string name="menu_home">Tổng quan</string>
    <string name="menu_notebook">Sổ tay</string>
    <string name="menu_protocol">Protocols &amp; SOPs</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">slideshow</string>
    <string name="menu_inventory">Quản lý kho</string>
    <string name="menu_labnote">Nghiên cứu của tôi</string>
    <string name="menu_booking">Đặt lịch</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Đăng nhập hoặc đăng ký</string>
    <string name="action_sign_in_short">Đăng nhập</string>
    <string name="welcome">"Chào mừng!"</string>
    <string name="invalid_username">Tên đăng nhập không hợp lệ</string>
    <string name="invalid_password">Mật khẩu phải trên 5 ký tự</string>
    <string name="invalid_first_name">Chứa ký tự không hợp lệ</string>
    <string name="invalid_last_name">Chứa ký tự không hợp lệ</string>
    <string name="invalid_confirm_password">Mật khẩu không khớp</string>
    <string name="invalid_signup_form">Thông tin đăng ký không hợp lệ</string>
    <string name="login_failed">"Đăng nhập thất bại"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">"Đăng ký"</string>
    <string name="already_have_account">"Bạn đã có tài khoản?"</string>
    <string name="log_in_link">"Đăng nhập"</string>
    <string name="first_name">"Họ"</string>
    <string name="last_name">"Tên"</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>

    <string name="default_web_client_id">3</string>
</resources>