<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.lkms.ui.login.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home" />

        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.lkms.ui.signup.SignUpFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_sign_up">

        <action
            android:id="@+id/action_signUpFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lkms.ui.home.DashboardFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_protocol"
        android:name="com.example.lkms.ui.protocol_sops.ProtocolFragment"
        android:label="@string/menu_protocol"
        tools:layout="@layout/fragment_protocol" />

    <fragment
        android:id="@+id/nav_notebook"
        android:name="com.example.lkms.ui.myexperiment.NotebookFragment"
        android:label="@string/menu_labnote"
        tools:layout="@layout/fragment_notebook" >
        <action
            android:id="@+id/action_notebookFragment_to_labNoteFragment"
            app:destination="@id/nav_labnote" />

    </fragment>

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.lkms.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/nav_labnote"
        android:name="com.example.lkms.ui.labnote.LabNoteFragment"
        android:label="@string/menu_notebook"
        tools:layout="@layout/fragment_lab_note" >

        <!-- Và đảm bảo nó có các "argument" (tham số) này để nhận ID -->
        <argument
            android:name="EXPERIMENT_ID"
            app:argType="integer"
            android:defaultValue="-1" />
        <argument
            android:name="EXPERIMENT_NAME"
            app:argType="string"
            android:defaultValue="Ghi chú" />



    </fragment>

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.example.lkms.ui.booking.BookingFragment"
        android:label="@string/menu_booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/nav_myaccount"
        android:name="com.example.lkms.ui.account.AccountFragment"
        android:label="Tài khoản"
        tools:layout="@layout/fragment_account" />


</navigation>